Add article about padlock for mac beta release

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -8,6 +8,9 @@
     </ul>
 </section>
 <section>
+    {{ partial "download-button" . }}
+</section>
+<section>
     {{ partial "newsletter-signup" . }}
 </section>
 {{ end }}
