--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,6 +10,9 @@
     {{ .Content }}
 </article>
 <section>
+    {{ partial "download-button" . }}
+</section>
+<section>
     {{ partial "newsletter-signup" . }}
 </section>
 {{ end }}
