--- a/static/css/base.css
+++ b/static/css/base.css
@@ -275,7 +275,7 @@ figure.float.left {
     border-radius: 4px;
     border: solid 2px;
     padding: 10px 15px 15px 15px;
-    margin-top: 25px;
+    margin: 25px 0;
     position: relative;
 }
 
