--- a/layouts/section/downloads.html
+++ b/layouts/section/downloads.html
@@ -26,20 +26,20 @@
         </a>
     </p>
     <p>
-        <a href="{{ $.Param "macUrl" }}" class="download-button get-app beta" data-platform="mac" target="_blank">
+        <a href="{{ $.Param "macUrl" }}" class="download-button get-app beta" data-platform="mac">
             <span class="inner">
                 {{ partial "apple.svg" }}
                 <span>Download for Mac</span>
             </span>
         </a>
-    </p>
-    <p>
-        <a href="#" class="download-button get-app coming-soon" data-platform="windows" target="_blank">
+        <a href="{{ $.Param "winUrl" }}" class="download-button get-app beta" data-platform="windows">
             <span class="inner">
                 {{ partial "windows.svg" }}
                 <span>Download for Windows</span>
             </span>
         </a>
+    </p>
+    <p>
         <a href="#" class="download-button get-app coming-soon" data-platform="linux" target="_blank">
             <span class="inner">
                 {{ partial "linux.svg" }}
