Minor styling tweak: Use darker color for links, buttons etc, add subtle gradient to hero section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,6 +5,7 @@
 
 {{ define "header" }}
     {{ partial "header" . }}
+    <header class="header-background"></header>
 
     <div class="hero">
         <h1>Padlock</h1>
