--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,7 +43,7 @@ h3 {
 }
 
 a {
-    color: #59c6ff;
+    color: #23b4ff;
     text-decoration: none;
     font-weight: 400;
 }
@@ -93,7 +93,7 @@ svg.icon {
 header {
     background: #ffffff;
     position: fixed;
-    top: 0; 
+    top: 0;
     width: 100%;
     z-index: 1;
     padding: 0 10px;
@@ -228,7 +228,7 @@ figure.float.left {
     min-width: 0;
     display: block;
     background-color: #fff;
-    border: solid 2px #59c6ff;
+    border: solid 1px #23b4ff;
     font-size: 110%;
     font-family: inherit;
     padding: 10px;
@@ -246,18 +246,18 @@ figure.float.left {
     width: 120px;
     font-size: 110%;
     font-family: inherit;
-    background: #59c6ff;
+    background: #23b4ff;
     color: #fff;
     padding: 10px;
     margin: 0;
     cursor: pointer;
-    border: solid 2px #59c6ff;
+    border: solid 2px #23b4ff;
 }
 
 .note {
     background: rgba(89, 198, 255, 0.1);
     padding: 20px;
-    border: solid 1px #59c6ff;
+    border: solid 1px #23b4ff;
     clear: both;
 }
 
