--- a/static/css/home.css
+++ b/static/css/home.css
@@ -18,6 +18,7 @@ header.header-background {
 }
 
 .hero {
+    background-color: #23b4ff;
     background: linear-gradient(180deg, #59c6ff 0%, #23b4ff 100%);
     height: 550px;
     padding: 100px 20px 50px 20px;
