--- a/static/css/base.css
+++ b/static/css/base.css
@@ -195,9 +195,17 @@ figure {
     text-align: center;
 }
 
+figure.center img {
+    max-height: 500px;
+}
+
+figure.rounded img {
+    border-radius: 5px;
+}
+
 figure img {
     max-height: 400px;
-    border: solid 1px rgba(89, 198, 255, 0.3);
+    max-width: 100%;
 }
 
 figure.float img {
