--- a/layouts/section/downloads.html
+++ b/layouts/section/downloads.html
@@ -26,13 +26,13 @@
         </a>
     </p>
     <p>
-        <a href="{{ $.Param "macUrl" }}" class="download-button get-app beta" data-platform="mac">
+        <a href="{{ $.Param "macUrl" }}" class="download-button get-app" data-platform="mac">
             <span class="inner">
                 {{ partial "apple.svg" }}
                 <span>Download for Mac</span>
             </span>
         </a>
-        <a href="{{ $.Param "winUrl" }}" class="download-button get-app beta" data-platform="windows">
+        <a href="{{ $.Param "winUrl" }}" class="download-button get-app" data-platform="windows">
             <span class="inner">
                 {{ partial "windows.svg" }}
                 <span>Download for Windows</span>
