--- a/layouts/section/downloads.html
+++ b/layouts/section/downloads.html
@@ -26,21 +26,19 @@
         </a>
     </p>
     <p>
-        <a href="{{ $.Param "macUrl" }}" class="download-button get-app" data-platform="mac">
-            <span class="inner">
-                {{ partial "apple.svg" }}
-                <span>Download for Mac</span>
-            </span>
-        </a>
         <a href="{{ $.Param "winUrl" }}" class="download-button get-app" data-platform="windows">
             <span class="inner">
                 {{ partial "windows.svg" }}
                 <span>Download for Windows</span>
             </span>
         </a>
-    </p>
-    <p>
-        <a href="#" class="download-button get-app coming-soon" data-platform="linux" target="_blank">
+        <a href="{{ $.Param "macUrl" }}" class="download-button get-app" data-platform="mac">
+            <span class="inner">
+                {{ partial "apple.svg" }}
+                <span>Download for Mac</span>
+            </span>
+        </a>
+        <a href="{{ $.Param "linuxUrl" }}" class="download-button get-app beta" data-platform="linux" target="_blank">
             <span class="inner">
                 {{ partial "linux.svg" }}
                 <span>Download for Linux</span>
