Replace inline svg icons with font icon set

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,6 +16,7 @@
 
         {{ define "basecss" }}
         <link href="/css/fonts.css" rel="stylesheet" type="text/css">
+        <link href="/css/icons.css" rel="stylesheet" type="text/css">
         <link href="/css/base.css" rel="stylesheet" type="text/css">
         {{ end }}
 
