--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,9 +11,7 @@
         <h1>Padlock</h1>
         <h2>A minimalist open source password manager.</h2>
         {{ partial "download-button" }}
-        <div class="logo">
-            {{ partial "padlock.svg" . }}
-        </div>
+        <div class="logo icon-padlock-negative"></div>
     </div>
 {{ end }}
 
