--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="inner">
         <a href="/" class="home">
-            {{ partial "padlock.svg" }}
+            <div class="icon-padlock"></div>
             <div class="type">Padlock</div>
         </a>
         <div class="spacer"></div>
