--- a/layouts/partials/social-links.html
+++ b/layouts/partials/social-links.html
@@ -1,6 +1,6 @@
 <a href="{{ $.Param "twitterUrl" }}" class="twitter" target="_blank">
-    {{ partial "twitter.svg" }}
+    <div class="icon-twitter"></div>
 </a>
 <a href="{{ $.Param "githubUrl" }}" class="padlock-github" target="_blank">
-    {{ partial "github.svg" }}
+    <div class="icon-github"></div>
 </a>
