--- a/static/css/downloads.css
+++ b/static/css/downloads.css
@@ -30,6 +30,8 @@ h1 {
     display: block;
     width: 100px;
     height: 100px;
+    font-size: 90px;
+    line-height: 100px;
     margin-bottom: 10px;
 }
 
