Replace logo on home page with link to app preview

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
         <h1>Padlock</h1>
         <h2>A minimalist open source password manager.</h2>
         {{ partial "download-button" }}
-        <div class="logo icon-padlock-negative"></div>
+        <a href="https://youtu.be/DkAGo9XoKwU" class="play icon-play-circle" target="_blank"></a>
     </div>
 {{ end }}
 
