Initial draft for home page redesign

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -41,6 +41,9 @@
             {{ end }}
         </main>
 
+        {{ block "float" . }}
+        {{ end }}
+
         {{ block "footer" . }}
             {{ partial "footer" . }}
         {{ end }}
