--- a/layouts/partials/download-button.html
+++ b/layouts/partials/download-button.html
@@ -1,8 +1,6 @@
-<div style="text-align: center">
-    <a href="/downloads/" class="download-button">
-        <span>Get the App</span>
-        <span class="icon icon-windows"></span>
-        <span class="icon icon-apple"></span>
-        <span class="icon icon-android"></span>
-    </a>
-</div>
+<a href="/downloads/" class="btn download-button">
+    <span>Get The App</span>
+    <span class="icon icon-windows"></span>
+    <span class="icon icon-apple"></span>
+    <span class="icon icon-android"></span>
+</a>
