--- a/static/css/base.css
+++ b/static/css/base.css
@@ -225,6 +225,24 @@ figure.float.left {
     margin: 0 20px 0 0;
 }
 
+button, .btn {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 4px;
+    border: solid 2px;
+    padding: 15px;
+    position: relative;
+    vertical-align: middle;
+    border-radius: 8px;
+    font-weight: bold;
+}
+
+button .icon, .btn .icon {
+    font-size: 25px;
+    margin-left: 10px;
+}
+
 .video.float.right {
     float: right;
     margin: 20px 0 20px 20px;
@@ -283,29 +301,6 @@ figure.float.left {
 
 .note p:last-child {
     margin-bottom: 0;
-}
-
-.download-button {
-    display: inline-block;
-    font-size: 120%;
-    border-radius: 4px;
-    border: solid 2px;
-    padding: 10px 15px 15px 15px;
-    margin: 25px 0;
-    position: relative;
-    vertical-align: middle;
-}
-
-.download-button .icon {
-    display: inline-block;
-    font-size: 25px;
-    width: 25px;
-    height: 25px;
-    margin-left: 5px;
-}
-
-.download-button > * {
-    vertical-align: middle;
 }
 
 @media (max-width: 500px) {
