--- a/static/css/base.css
+++ b/static/css/base.css
@@ -190,7 +190,7 @@ main {
 }
 
 header .inner, main {
-    max-width: 800px;
+    max-width: 900px;
 }
 
 figure {
@@ -231,7 +231,7 @@ button, .btn {
     align-items: center;
     border-radius: 4px;
     border: solid 2px;
-    padding: 15px;
+    padding: 15px 20px;
     position: relative;
     vertical-align: middle;
     border-radius: 8px;
@@ -240,7 +240,7 @@ button, .btn {
 
 button .icon, .btn .icon {
     font-size: 25px;
-    margin-left: 10px;
+    margin-left: 12px;
 }
 
 .video.float.right {
