--- a/layouts/partials/device.html
+++ b/layouts/partials/device.html
@@ -11,7 +11,7 @@
         <div class="body"></div>
         <div class="front">
             <div class="screen">
-                <video src="{{ .video }}" playsinline oncanplaythrough="console.log('video loaded');"></video>
+                <video src="{{ .video }}" playsinline></video>
                 <!-- <img src="{{ .img }}" style="display: none" onload="console.log('loaded'); this.style.display='';"> -->
                 <!-- <img src="/img/v2.1&#45;locked.png" onload="console.log('preloaded')"> -->
                 <!-- <iframe width="276" height="495" frameborder="0" -->
@@ -25,26 +25,40 @@
 (() => {
     const deviceWrapper = document.currentScript.previousElementSibling;
     const device = deviceWrapper.querySelector(".device");
-    const deviceBounds = device.getBoundingClientRect();
     const video = deviceWrapper.querySelector("video");
     const scroller = document.scrollingElement;
+    const deviceBounds = device.getBoundingClientRect();
     const scrollerHeight = scroller.offsetHeight;
+    const deviceTop = deviceBounds.top + scroller.scrollTop;
+    const topThreshold = Math.min(
+        // Top threshold is when the middle of the device is in the upper two thirds of the screen
+        deviceTop - scrollerHeight * 2 / 3,
+        scroller.scrollHeight
+    );
+    const bottomThreshold = Math.max(
+        deviceTop + deviceBounds.height - scrollerHeight * 1 / 3,
+        0
+    );
 
-    var hasPlayed = false;
+    let hasPlayed = false;
 
-    document.addEventListener("scroll", () => {
-        if (
-            !hasPlayed &&
-            scroller.scrollTop + scrollerHeight > deviceBounds.top + deviceBounds.height/2 &&
-            scroller.scrollTop < deviceBounds.top + deviceBounds.height/2
-        ) {
-            hasPlayed = true;
-            device.style.animationPlayState = "running";
-            video.play();
-        }
+    video.addEventListener("playing", () => {
+        device.style.animationPlayState = "running";
     });
 
-    // video.addEventListener("canplaythrough", () => {
-    // });
+    const scrollHandler = () => {
+        if (
+            !hasPlayed &&
+            scroller.scrollTop > topThreshold &&
+            scroller.scrollTop < bottomThreshold
+        ) {
+            document.removeEventListener("scroll", scrollHandler);
+            hasPlayed = true;
+            video.play();
+        }
+    };
+
+    document.addEventListener("scroll", scrollHandler);
+    window.addEventListener("load", scrollHandler);
 })();
 </script>
