More adjustments on design use mp4 videos instead of mov use mute attribute on videos

--- a/layouts/partials/device.html
+++ b/layouts/partials/device.html
@@ -11,7 +11,7 @@
         <div class="body"></div>
         <div class="front">
             <div class="screen">
-                <video src="{{ .video }}" playsinline></video>
+                <video src="{{ .video }}" playsinline muted></video>
                 <!-- <img src="{{ .img }}" style="display: none" onload="console.log('loaded'); this.style.display='';"> -->
                 <!-- <img src="/img/v2.1&#45;locked.png" onload="console.log('preloaded')"> -->
                 <!-- <iframe width="276" height="495" frameborder="0" -->
