--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,19 +6,16 @@
 
 {{ define "header" }}
     {{ partial "header" . }}
-    <header class="header-background"></header>
+{{ end }}
 
-    <div class="hero">
-        <div class="hero-inner">
-            <h1>
-                <span class="logo-icon icon-padlock-negative"></span>
-                <span>Padlock</span>
-            </h1>
-            <h2>All your sensitive data in one secure place.</h2>
-            <div class="description">
+{{ define "main" }}
+    <section class="hero">
+        <div class="inner">
+            <h1>All your sensitive data in one secure place.</h1>
+            <h2>
                 Padlock securely stores all of your passwords and other sensitive information for you
                 so all you have to remember is a single master password!
-            </div>
+            </h2>
             <div class="buttons">
                 {{ partial "download-button" }}
                 <!-- <a href="#" class="btn"> -->
@@ -26,63 +23,43 @@
                 <!--     <span class="icon icon&#45;play&#45;circle"></span> -->
                 <!-- </a> -->
             </div>
-            {{ partial "device" (dict "video" "/img/v2.1-unlock.mov") }}
+            {{ partial "device" (dict "video" "/img/v2.1-unlock.mp4") }}
         </div>
-    </div>
-{{ end }}
-
-{{ define "main" }}
+    </section>
 
     <section class="showcase right">
-        <h1>Beautifully simple<br>and easy to use.</h1>
-        <p>
-            Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
-            Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
-        </p>
-        {{ partial "device" (dict "video" "/img/v2.1-generate.mov") }}
+        <div class="inner">
+            <h1>Beautifully simple<br>and easy to use.</h1>
+            <h2>
+                Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
+                Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
+            </h2>
+            {{ partial "device" (dict "video" "/img/v2.1-generate.mp4") }}
+        </div>
     </section>
 
     <section class="showcase left">
-        <h1>Effortlessly synchronize all your devices.</h1>
-        <p>
-            Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
-            Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
-        </p>
-        {{ partial "device" (dict "video" "/img/v2.1-generate.mov") }}
+        <div class="inner">
+            <h1>Effortlessly synchronize all your devices.</h1>
+            <h2>
+                Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
+                Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
+            </h2>
+            {{ partial "device" (dict "video" "/img/v2.1-generate.mp4") }}
+        </div>
     </section>
 
     <section class="showcase right">
-        <h1>Padlock <span class="icon-heart"></span> Open Source</h1>
-        <p>
-            Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
-            Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
-        </p>
-        {{ partial "device" (dict "video" "/img/v2.1-generate.mov") }}
+        <div class="inner">
+            <h1>Padlock <span class="icon-heart"></span> Open Source</h1>
+            <h2>
+                Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
+                Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
+            </h2>
+            {{ partial "device" (dict "video" "/img/v2.1-generate.mp4") }}
+        </div>
     </section>
 
-    <section>
-        <h1>News</h1>
-        <ul class="articles">
-            {{ range first 2 (where .Data.Pages ".Type" "news") }}
-                {{ .Render "li" }}
-            {{ end }}
-        </ul>
-
-        <a href="/news/"><h2>More News...</h2></a>
-
-        {{ partial "newsletter-signup" . }}
-    </section>
-
-    <section class="about">
-        <h1>About Padlock</h1>
-        {{ range where .Data.Pages "Title" "About Padlock" }}
-            {{ .Content }}
-        {{ end }}
-    </section>
-
-    <section>
-    {{ partial "download-button" }}
-    </section>
 {{ end }}
 
 {{ define "float" }}
