--- a/static/css/device.css
+++ b/static/css/device.css
@@ -77,7 +77,7 @@
     border: solid 1px #aaa;
 }
 
-.back {
+.device > .back {
     background: #fff;
     border: solid 1px #aaa;
 }
@@ -94,4 +94,43 @@
 
 .screen > img, .screen > video {
     width: 100%;
+}
+
+/* DESKTOP DEVICE */
+
+.device.desktop {
+    width: 900px;
+    height: 600px;
+}
+
+.device.desktop > div {
+    border-radius: 8px;
+}
+
+.device.desktop .front {
+    padding: 30px 5px 5px 5px;
+}
+
+.device.desktop .screen {
+    border-radius: 4px;
+}
+
+.window-buttons {
+    position: absolute;
+    top: 3px;
+    left: 12px;
+}
+
+.device:not(.desktop) .window-buttons {
+    display: none;
+}
+
+.window-buttons > * {
+    display: inline-block;
+    width: 10px;;
+    height: 10px;;
+    background: #ccc;
+    border: solid 1px #aaa;
+    border-radius: 100%;
+    margin-right: 4px;
 }
