--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,19 +23,21 @@
                 <!--     <span class="icon icon&#45;play&#45;circle"></span> -->
                 <!-- </a> -->
             </div>
-            {{ partial "device" (dict "video" "/img/v2.1-unlock.mp4") }}
         </div>
+        {{ partial "device" (dict "video" "/img/v2.1-unlock.mp4") }}
     </section>
 
-    <section class="showcase right">
+    <section class="cross-platform">
         <div class="inner">
-            <h1>Beautifully simple<br>and easy to use.</h1>
+            <h1>Run It Everywhere.</h1>
             <h2>
-                Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
-                Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
+                Padlock is available on all major<br>
+                platforms so you can take your<br>
+                data with you wherever you go!
             </h2>
-            {{ partial "device" (dict "video" "/img/v2.1-generate.mp4") }}
         </div>
+        {{ partial "device" (dict "type" "desktop" "video" "/img/v2.1-sync-desktop.mov") }}
+        {{ partial "device" (dict "type" "phone" "video" "/img/v2.1-sync-mobile.mov") }}
     </section>
 
     <section class="showcase left">
@@ -45,7 +47,6 @@
                 Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
                 Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
             </h2>
-            {{ partial "device" (dict "video" "/img/v2.1-generate.mp4") }}
         </div>
     </section>
 
@@ -56,7 +57,6 @@
                 Padlock is the one, secure place to store all your passwords, pins, credit cards and other sensitive information.
                 Strong encryptions makes sure that nobody other than you can ever access your data, not even we!
             </h2>
-            {{ partial "device" (dict "video" "/img/v2.1-generate.mp4") }}
         </div>
     </section>
 
