--- a/static/css/device.css
+++ b/static/css/device.css
@@ -1,13 +1,3 @@
-.device-wrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    perspective: 1500px;
-    pointer-events: none;
-}
-
 .device {
     position: absolute;
     top: 0;
@@ -16,7 +6,7 @@
     bottom: 0;
     margin: auto;
     width: 300px;
-    height: 578px;
+    height: 574px;
     transform-style: preserve-3d;
     transition: transform 1s;
 }
@@ -89,18 +79,18 @@
     background: #ccc;
     border-radius: 6px;
     overflow: hidden;
-    padding: 1px;
+    border: solid 1px #aaa;
 }
 
 .screen > img, .screen > video {
     width: 100%;
 }
 
-/* DESKTOP DEVICE */
+/* DESKTOP */
 
 .device.desktop {
-    width: 900px;
-    height: 600px;
+    width: 800px;
+    height: 630px;
 }
 
 .device.desktop > div {
@@ -133,4 +123,15 @@
     border: solid 1px #aaa;
     border-radius: 100%;
     margin-right: 4px;
+}
+
+/* TABLET */
+
+.device.tablet {
+    width: 700px;
+    height: 500px;
+}
+
+.device.tablet .front {
+    padding: 10px 30px 10px 30px;
 }
