--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,65 @@
     <link href="/css/device.css" rel="stylesheet" type="text/css">
 {{ end }}
 
+{{ define "js" }}
+<script>
+(() => {
+    let scroller, scrollerHeight, device, deviceWrapper, currSection, video;
+
+    const sections = [
+        {
+            bounds: [0, 400],
+            in: () => {
+                device.classList.add("hero");
+                video.src = "/img/v2.1-unlock.mp4";
+                video.play();
+            },
+            out: () => {
+                device.classList.remove("hero");
+            }
+        },
+        {
+            bounds: [400, 1000],
+            in: () => {
+                device.classList.add("simple");
+                video.src = "/img/v2.1-open-record.mp4";
+                video.play();
+            },
+            out: () => {
+                device.classList.remove("simple");
+            }
+        }
+    ];
+
+    function scroll() {
+        const originTop = scroller.scrollTop + scrollerHeight / 2;
+        deviceWrapper.style.perspectiveOrigin = `center ${originTop}px`;
+
+        const st = scroller.scrollTop;
+        const section = sections.find((s) => st >= s.bounds[0] && st < s.bounds[1]);
+
+        if (section != currSection) {
+            currSection && currSection.out && currSection.out();
+            section && section.in && section.in();
+            currSection = section;
+        }
+    };
+
+
+    window.addEventListener("load", () => {
+        device = document.querySelector(".device");
+        deviceWrapper = document.querySelector(".device-wrapper");
+        scroller = document.scrollingElement;
+        scrollerHeight = scroller.offsetHeight;
+        video = device.querySelector("video");
+
+        document.addEventListener("scroll", scroll);
+        scroll();
+    });
+})();
+</script>
+{{ end }}
+
 {{ define "header" }}
     {{ partial "header" . }}
 {{ end }}
@@ -24,20 +83,17 @@
                 <!-- </a> -->
             </div>
         </div>
-        {{ partial "device" (dict "video" "/img/v2.1-unlock.mp4") }}
     </section>
 
-    <section class="cross-platform">
+    <section class="simple">
         <div class="inner">
-            <h1>Run It Everywhere.</h1>
+            <h1>Beautifully Simple And Easy To Use.</h1>
             <h2>
-                Padlock is available on all major<br>
-                platforms so you can take your<br>
-                data with you wherever you go!
+                We know it can be tedious to learn using new software, so we made sure that Padlock
+                is as easy to use as possible. Padlock focusses on the most essential features and
+                make these as easy to use as possible. No clutter, no distractions!
             </h2>
         </div>
-        {{ partial "device" (dict "type" "desktop" "video" "/img/v2.1-sync-desktop.mov") }}
-        {{ partial "device" (dict "type" "phone" "video" "/img/v2.1-sync-mobile.mov") }}
     </section>
 
     <section class="showcase left">
@@ -63,4 +119,7 @@
 {{ end }}
 
 {{ define "float" }}
+    <div class="device-wrapper">
+        {{ partial "device" (dict "video" "/img/v2.1-unlock.mp4") }}
+    </div>
 {{ end }}
