--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,33 +1,3 @@
-@keyframes lazy-spin {
-    from {
-        transform: translateX(250px) scale(0.8) rotateY(-60deg) rotateX(20deg);
-    }
-
-    to {
-        transform: translateX(250px) scale(0.8) rotateY(-30deg) rotateX(20deg);
-    }
-}
-
-@keyframes spin {
-    from {
-        transform: scale(0.5) rotateY(-100deg) rotateX(20deg);
-    }
-
-    to {
-        transform: scale(0.8) rotateY(-30deg) rotateX(20deg);
-    }
-}
-
-@keyframes spin-right {
-    from {
-        transform: scale(0.5) rotateY(100deg) rotateX(20deg);
-    }
-
-    to {
-        transform: scale(0.8) rotateY(30deg) rotateX(20deg);
-    }
-}
-
 html, body {
     height: 100%;
 }
@@ -65,40 +35,51 @@ section {
     margin: 0;
     padding: 0;
     position: relative;
+    z-index: 2;
     height: 600px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     perspective: 2000px;
 }
 
 section:nth-of-type(2n) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
 }
 
 section:nth-of-type(2n+1) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
-}
-
-section::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: url("/img/bg.svg");
-    background-size: 28px;
-    opacity: 0.3;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 section .inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: relative;
     width: 100%;
+    height: 100%;
     box-sizing: border-box;
     max-width: 900px;
     margin: 0 auto;
-    padding: 50px;
+}
+
+section h1 {
+    margin: 0 0 30px 0;
+}
+
+section h2 {
+    font-size: 130%;
+    margin: 0 0 40px 0;
+    font-weight: 300;
+}
+
+.device-wrapper {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    z-index: 1;
+    perspective: 2000px;
+}
+
+.device {
+    transition: transform 2s;
+    transform: translateX(250px) scale(0.8) rotateY(-60deg) rotateX(20deg);
 }
 
 /* HERO SECTION */
@@ -109,8 +90,6 @@ section.hero {
     max-height: 1000px;
     position: relative;
     background-color: #23b4ff;
-    /* background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%); */
-    /* background: linear-gradient(180deg, #59c6ff 0%, #01a2f5 100%); */
     background: linear-gradient(180deg, #59c6ff 0%, #0274af 100%);
     color: #fff;
     overflow: hidden;
@@ -119,20 +98,24 @@ section.hero {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 0;
 }
 
+
 .hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url("/img/bg.svg");
+    background-size: 28px;
     opacity: 0.07;
 }
 
 .hero a {
     color: #fff;
-}
-
-.hero h1 {
-    margin-top: -20px;
-    font-weight: 400;
-    width: 450px;
 }
 
 .hero .logo-icon {
@@ -141,10 +124,8 @@ section.hero {
     top: 5px;
 }
 
-.hero h2 {
-    font-size: 130%;
-    margin-top: 30px;
-    margin-bottom: 40px;
+.hero h1, .hero h2 {
+    font-weight: 400;
     width: 450px;
 }
 
@@ -163,67 +144,31 @@ section.hero {
     box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
 }
 
-.hero .device {
-    animation: lazy-spin 2s both paused;
-    /* transform: scale(0.8) rotateY(-30deg) rotateX(20deg); */
-    /* animation-iteration-count: infinite; */
-    /* transform: scale(0.8) rotateY(-40deg) rotateX(20deg); */
+.device.hero {
+    transform: translateX(250px) scale(0.8) rotateY(-30deg) rotateX(20deg);
 }
 
 /* CROSS-PLATFORM SECTION */
 
-.cross-platform {
-    text-align: center;
-    justify-content: start;
-    height: 800px;
+section.simple {
+    height: 700px;
 }
 
-.cross-platform .device.phone {
-    transform: translate(-250px, 50px) rotateY(20deg) rotateX(10deg) scale(0.7);
-}
-
-.cross-platform .device.phone .front {
-    background: currentColor;
-}
-
-.cross-platform .device.desktop {
-    transform: translate(250px, 50px) rotateY(-20deg) rotateX(10deg) scale(0.7);
-}
-
-.cross-platform .device.desktop .front {
-    background: currentColor;
-}
-
-.showcase.left .inner > * {
-    text-align: left;
-    padding-right: 350px;
-}
-
-.showcase.left .device {
-    right: 50px;
-    left: auto;
-    animation: spin 1s both paused cubic-bezier(0.6, 0, 0.2, 1);
-    animation-fill-mode: both;
-}
-
-.showcase .device .front, .showcase .device .back {
-    background: currentColor;
-}
-
-.showcase .device .body {
-    background: #444;
-}
-
-.showcase.right .inner > * {
+section.simple .inner {
     text-align: right;
-    padding-left: 350px;
+    align-items: flex-end;
 }
 
-.showcase.right .device {
-    left: 50px;
-    right: auto;
-    animation: spin-right 1s both paused cubic-bezier(0.6, 0, 0.2, 1);
-    animation-fill-mode: both;
+section.simple .inner > h1 {
+    width: 400px;
+}
+
+section.simple .inner > h2 {
+    width: 500px;
+}
+
+.device.simple {
+    transform: translate(-250px, 750px) scale(0.8) rotateY(390deg) rotateX(20deg);
 }
 
 @keyframes beat {
@@ -236,10 +181,6 @@ section.hero {
 .icon-heart {
     display: inline-block;
     animation: beat 5s infinite both;
-}
-
-.about p {
-    line-height: 1.5em;
 }
 
 @media (max-width: 500px) {
