Make hero element fixed height; Fix scaling issues; Fix playback issues on iOS;

--- a/layouts/partials/device.html
+++ b/layouts/partials/device.html
@@ -16,7 +16,7 @@
         </div>
         <div class="screen">
             {{ with .video }}
-                <video src="{{ . }}" playsinline muted></video>
+                <video playsinline muted autoplay></video>
             {{ end }}
             {{ with .img }}
                 <img src="{{ . }}" style="display: none" onload="this.style.display='';">
