--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    overflow-x: hidden;
 }
 
 header {
@@ -35,23 +35,23 @@ section {
     margin: 0;
     padding: 0;
     position: relative;
-    z-index: 2;
-    height: 700px;
-    perspective: 2000px;
+    padding-top: 100px;
+    height: 350px;
+    perspective: 3000px;
 }
 
 section:nth-of-type(2n) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
 }
 
 section:nth-of-type(2n+1) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 section .inner {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;;
     position: relative;
     width: 100%;
     height: 100%;
@@ -70,11 +70,22 @@ section h2 {
     font-weight: 300;
 }
 
+.device-stage {
+    position: absolute;
+    top: 0; left: 0; right: 0;
+    perspective: 2000px;
+    height: 500px;
+    transition: transform 1s;
+    pointer-events: none;
+    transform: translate3d(0, 100px, 0);
+}
+
 .device-wrapper {
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
-    z-index: 1;
-    perspective: 2000px;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+    transform: translate3d(300px, -30px, -500px) rotateY(-60deg) rotateX(20deg);
 }
 
 .device {
@@ -83,29 +94,32 @@ section h2 {
     left: 0;
     right: 0;
     margin: auto;
+}
 
-    transition: transform 1s;
-    transform: translate(250px, 70px) scale(0.8) rotateY(-60deg) rotateX(20deg);
+.device.desktop {
+    visibility: hidden;
+    transform: rotateY(180deg);
 }
 
 /* HERO SECTION */
 
 section.hero {
     position: relative;
+    padding-top: 0;
+    height: 700px;
     background-color: #23b4ff;
     background: linear-gradient(180deg, #59c6ff 0%, #0274af 100%);
     color: #fff;
     overflow: hidden;
     text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+}
+
+section.hero .inner {
     justify-content: center;
-    z-index: 0;
 }
 
 
-.hero::before {
+section.hero::before {
     content: "";
     position: absolute;
     top: 0;
@@ -114,7 +128,7 @@ section.hero {
     bottom: 0;
     background: url("/img/bg.svg");
     background-size: 28px;
-    opacity: 0.07;
+    opacity: 0.05;
 }
 
 .hero a {
@@ -125,6 +139,10 @@ section.hero {
     font-size: 100%;
     position: relative;
     top: 5px;
+}
+
+.hero h1 {
+    margin-top: -20px;
 }
 
 .hero h1, .hero h2 {
@@ -147,15 +165,11 @@ section.hero {
     box-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
 }
 
-.device.hero {
-    transform: translate(250px, 70px) scale(0.8) rotateY(-30deg) rotateX(20deg);
+.device-stage.hero .device-wrapper {
+    transform: translate3d(300px, -30px, -500px) rotateY(-30deg) rotateX(20deg);
 }
 
-/* CROSS-PLATFORM SECTION */
-
-section.simple {
-    height: 700px;
-}
+/* SIMPLE SECTION */
 
 section.simple .inner {
     text-align: right;
@@ -170,9 +184,47 @@ section.simple .inner > h2 {
     width: 500px;
 }
 
-.device.simple {
-    transform: translate(-250px, 750px) scale(0.8) rotateY(390deg) rotateX(20deg);
+.device-stage.simple {
+    transform: translate3d(0, 700px, 0);
 }
+
+.device-stage.simple .device-wrapper {
+    transform: translate3d(-350px, -10px, -600px) rotateY(390deg) rotateX(20deg);
+}
+
+/* CROSS-PLATFORM SECTION */
+
+section.cross-platform .inner {
+    /* background: linear-gradient(90deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%); */
+    text-align: left;
+}
+
+section.cross-platform .inner > h1 {
+    width: 300px;
+}
+
+section.cross-platform .inner > h2 {
+    width: 400px;
+}
+
+.device-stage.cross-platform {
+    transform: translate3d(0, 1150px, 0);
+}
+
+.device-stage.cross-platform .device-wrapper {
+    transform: translate3d(350px, -50px, -900px) rotateY(150deg) rotateX(-20deg);
+}
+
+.device-stage.cross-platform .device > div {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.device-stage.cross-platform .device.desktop {
+    visibility: visible;
+}
+
+/* OPEN-SOURCE SECTION */
 
 @keyframes beat {
     0% { transform: scale(0.9); }
